2009-12-17  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-edit-uses-xrefs): New variable. For contribs to
	extend.
	(slime-edit-uses): Use it.

	* swank.lisp (xref-doit): Now a generic functions. For contribs to
	extend.

2009-12-17  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (with-top-level-restart): Bind local special.
	(top-level-restart-p): Check for it; this tells us if we're in
	the dynamic extent of with-top-level-restart.
	(handle-requests): Use it.

2009-12-17  Stas Boukarev  <stassats@gmail.com>

	* swank-match.lisp: Fix formatting and style warnings.

2009-12-17  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (handle-requests): Comment out
	(assert (boundp '*sldb-quit-restart*)) because it's not bound
	on NIL communication style. It's not a real fix, but at least it
	lets null communication-style work.

2009-12-16  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (categorize-definition-source): New.
	(definition-source-for-emacs): Use it. Slightly
	refactored. Renamed from `make-definition-source-location'.
	(find-definitions, find-source-location)
	(source-location-for-xref-data, function-dspec): Updated
	accordingly.
	(source-file-position): Scratch last argument, not needed anymore.

2009-12-16  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (compile-file-output): Use
	(make-pathname :directory dir :defaults (compile-file-pathname file))
	instead of (compile-file-pathname file :output-file dir),
	because the latter works differently on different implementations.
	(fasl-pathname): Use the above function.

2009-12-16  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (*sldb-quit-restart*): Export. For users to customize
	what `q' does in SLDB.
	(handle-requests): Test differently for recursive invocations
	as *sldb-quit-restart* may now be globally bound due to user
	customization.
	(coerce-restart): Coerces a restart-designator to a restart.
	(throw-to-toplevel): Use it.
